--- a/css/main.css
+++ b/css/main.css
@@ -315,6 +315,12 @@ footer ul li a:hover {
 	text-align: center;
 	float: left;
 	cursor: pointer;
+
+	-webkit-transition: all 90ms ease-in-out;
+	-moz-transition: all 90ms ease-in-out;
+	-ms-transition: all 90ms ease-in-out;
+	-o-transition: all 90ms ease-in-out;
+	transition: all 90ms ease-in-out;
 }
 
 .collection-item-last {
