--- a/css/main.css
+++ b/css/main.css
@@ -63,11 +63,16 @@ textarea {
 
 /* GENERAL STYLES */
 
+html {
+	height: 100%;
+}
+
 body {
 	background: #f5f5f5;
 	font-family: 'Lucida Grande', Tahoma, Verdana, Arial, sans-serif;
 	color: #111;
 	-webkit-font-smoothing: antialiased;
+	height: 100%;
 }
 
 * {
@@ -243,7 +248,8 @@ nav ul li img {
 	padding: 20px;
 	background: white;
 	border: 1px solid #e2e2e2;
-	border-left: 0;
+	border-bottom: none;
+	border-left: none;
 	float: left;
 }
 
@@ -571,6 +577,12 @@ li#contact a, li#about a, li#documentation {
 #border {
 	height: 10px;
 	background: #111;
+
+	-webkit-transition: 0.5s all ease-in-out;
+	-moz-transition: 0.5s all ease-in-out;
+	-ms-transition: 0.5s all ease-in-out;
+	-o-transition: 0.5s all ease-in-out;
+	transition: 0.5s all ease-in-out;
 }
 
 img#main-logo {
@@ -596,6 +608,18 @@ li.language a {
 
 li.language a:hover {
 	color: #111;
+}
+
+#landing-wrapper {
+	text-align: center;
+	overflow: auto;
+	background-color: white;
+	height: 100%;
+	text-align: center;
+	margin: 0 auto;
+	border-style: solid;
+	border-width: 0;
+	border-color: #e2e2e2;
 }
 
 /* Form */
