--- a/css/main.css
+++ b/css/main.css
@@ -123,6 +123,16 @@ header {
 	z-index: 999;
 }
 
+nav {
+	overflow: auto;
+
+	-webkit-transition: 0.5s all ease-in-out;
+	-moz-transition: 0.5s all ease-in-out;
+	-ms-transition: 0.5s all ease-in-out;
+	-o-transition: 0.5s all ease-in-out;
+	transition: 0.5s all ease-in-out;
+}
+
 nav ul {
 	color: white;
 	text-align: center;
@@ -175,6 +185,12 @@ nav ul li img {
 	width: 960px;
 	position: relative;
 	overflow: auto;
+
+	-webkit-transition: 0.5s opacity ease-in-out;
+	-moz-transition: 0.5s opacity ease-in-out;
+	-ms-transition: 0.5s opacity ease-in-out;
+	-o-transition: 0.5s opacity ease-in-out;
+	transition: 0.5s opacity ease-in-out;
 }
 
 .slider ul {
@@ -246,6 +262,12 @@ nav ul li img {
 	border-bottom: none;
 	border-left: none;
 	float: left;
+
+	-webkit-transition: 0.5s opacity ease-in-out;
+	-moz-transition: 0.5s opacity ease-in-out;
+	-ms-transition: 0.5s opacity ease-in-out;
+	-o-transition: 0.5s opacity ease-in-out;
+	transition: 0.5s opacity ease-in-out;
 }
 
 .content-box p {
