--- a/css/main.css
+++ b/css/main.css
@@ -604,11 +604,12 @@ li.language a:hover {
 #contact {
 	margin-top: 20px;
 	font-family: 'Lucida Grande', Tahoma, Verdana, Arial, sans-serif;
+	position: relative; /* For absolute positioning within */
 }
 
 #contact input, #contact textarea {
 	background-color: rgba(0,0,0,0);
-	border: 1px solid #111;
+	border: 1px solid #666666;
 	color: #111;
 	font-size: 14px;
 	height: 40px;
@@ -616,9 +617,13 @@ li.language a:hover {
 	padding-left: 10px;
 }
 
+.invalid {
+	border: 1px solid #c6000d !important;
+}
+
 #contact input:focus, #contact textarea:focus {
 	outline: none;
-	border-color: #a6a6a6;
+	border-color: #111;
 }
 
 #contact input {
@@ -634,7 +639,7 @@ li.language a:hover {
 	padding: 10px;
 }
 
-#contact input[type="submit"] {
+#contact input[type="button"] {
 	width: 80px;
 	background: #111;
 	height: 40px;
@@ -642,6 +647,19 @@ li.language a:hover {
 	font-family: 'Lucida Grande', Tahoma, Verdana, Arial, sans-serif;
 	float: right;
 	margin-top: 15px;
+}
+
+#notification {
+	display: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	padding-top: 50px;
+	color: #111;
+	font-size: 16px;
 }
 
 ::-webkit-input-placeholder {
