--- a/css/main.css
+++ b/css/main.css
@@ -439,7 +439,6 @@ footer small {
 .item {
 	width: 190px;
 	height: 190px;
-	background: #f5f5f5;
 	float: left;
 	margin-left: 40px;
 	margin-top: 40px;
@@ -447,6 +446,10 @@ footer small {
 
 .last-row {
 	margin-bottom: 40px;
+}
+
+.item img:hover {
+	opacity: .75;
 }
 
 /* Features */
