--- a/css/main.css
+++ b/css/main.css
@@ -348,6 +348,7 @@ footer small {
 	top: 60px;
 	background-color:rgba(255,255,255,0.9);
 	outline: 1px solid #e2e2e2;
+	z-index: 2;
 }
 
 .section {
@@ -453,6 +454,35 @@ footer small {
 	opacity: .75;
 }
 
+#modal-product {
+	height: 420px;
+}
+
+#modal-product h3 {
+	margin-bottom: 5px;
+	margin-top: 15px;
+}
+
+#modal-product .slider {
+	width: 350px;
+	height: 350px !important;
+}
+
+#modal-product .slider ul li img{
+	width: 350px;
+	height: 350px;
+}
+
+#modal-product .dots li {
+	background: #666;
+}
+
+.product-description {
+	float: right;
+	width: 310px;
+	color: #666;
+}
+
 /* Features */
 
 .material {
@@ -543,19 +573,15 @@ footer small {
 .modal {
 	display: none;
 	position: fixed;
-	top: 50%;
-	left: 50%;
-	background: white; 
+	background-color: white; 
 	width: 780px;
-	height: 420px;
+	min-height: 420px;
 	z-index: 1000;
-	background-color:rgba(255,255,255,0.9);
 	padding: 40px;
 	margin: 0 auto;
 	-moz-box-shadow: 0 0 8px rgba(4,4,4,.3);
 	-webkit-box-shadow: 0 0 8px rgba(4,4,4,.3);
 	box-shadow: 0 0 8px rgba(4,4,4,.3);
-	margin: -210px 0 0 -390px;
 }
 
 .modal h3 {
