--- a/css/main.css
+++ b/css/main.css
@@ -82,11 +82,11 @@ a {
 	font-weight: bold;
 	cursor: pointer; /* Gives hand cursor to all links (even with no href) */
 
-	-webkit-transition: color 0.1s ease-in-out;
-	-moz-transition: color 0.1s ease-in-out;
-	-ms-transition: color 0.1s ease-in-out;
-	-o-transition: color 0.1s ease-in-out;
-	transition: color 0.1s ease-in-out;
+	-webkit-transition: color 0.2s ease-in-out;
+	-moz-transition: color 0.2s ease-in-out;
+	-ms-transition: color 0.2s ease-in-out;
+	-o-transition: color 0.2s ease-in-out;
+	transition: color 0.2s ease-in-out;
 }
 
 a:hover {
@@ -407,11 +407,11 @@ footer small {
 	margin-top: 5px;
 	margin-bottom: 20px;
 
-	-webkit-transition: all 90ms ease-in-out;
-	-moz-transition: all 90ms ease-in-out;
-	-ms-transition: all 90ms ease-in-out;
-	-o-transition: all 90ms ease-in-out;
-	transition: all 90ms ease-in-out;
+	-webkit-transition: all 0.1s ease-in-out;
+	-moz-transition: all 0.1s ease-in-out;
+	-ms-transition: all 0.1s ease-in-out;
+	-o-transition: all 0.1s ease-in-out;
+	transition: all 0.1s ease-in-out;
 }
 
 .section-image-container {
@@ -438,6 +438,13 @@ footer small {
 	margin: 0;
 	padding: 0;
 	text-shadow: 0 1px 1px rgba(0,0,0,0.4);
+
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 #hampton-header {
@@ -473,7 +480,7 @@ footer small {
 }
 
 #modal-product {
-	height: 410px;
+	min-height: 410px;
 }
 
 #modal-product h3 {
@@ -526,6 +533,17 @@ footer small {
 	text-align: center;
 	font-size: 30px;
 	color: #999;
+}
+
+.color-option {
+	float: left;
+	margin-right: 20px;
+	text-align: center;
+	margin-top: 10px;
+}
+
+.color-option img {
+	margin-bottom: 10px;
 }
 
 /* Features */
