--- a/css/main.css
+++ b/css/main.css
@@ -406,6 +406,7 @@ footer small {
 	width: 90px;
 	margin-top: 5px;
 	margin-bottom: 20px;
+	transform: translateZ(0);
 
 	-webkit-transition: all 0.1s ease-in-out;
 	-moz-transition: all 0.1s ease-in-out;
