--- a/css/main.css
+++ b/css/main.css
@@ -354,6 +354,9 @@ footer ul li a:hover {
 footer small {
 	color: #a6a6a6;
 	text-align: center;
+	padding: 0 15px;
+	display: inline-block;
+	width: 100%;
 }
 
 /* Sections */
